<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="text_button_0">0</string>
    <string name="text_button_clear">C</string>
    <string name="text_button_start">(</string>
    <string name="text_button_end">)</string>
    <string name="text_button_plus">+</string>
    <string name="text_button_1">1</string>
    <string name="text_button_2">2</string>
    <string name="text_button_3">3</string>
    <string name="text_button_min">-</string>
    <string name="text_button_4">4</string>
    <string name="text_button_5">5</string>
    <string name="text_button_6">6</string>
    <string name="text_button_times">*</string>
    <string name="text_button_7">7</string>
    <string name="text_button_8">8</string>
    <string name="text_button_9">9</string>
    <string name="text_button_div">/</string>
    <string name="text_button_float">.</string>
    <string name="text_button_equal">=</string>
    <string name="text_button_del">Del</string>
    <string name="text_result">Result:</string>
</resources>